[修改] rooms api 製作
